@@ -1,0 +1,100 @@
+#!/usr/bin/env bash
+#---------------------------------------------------------------------------
+# Copyright 2011-2012 The Open Source Electronic Health Record Agent
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+#---------------------------------------------------------------------------
+
+# init script for VistA
+
+# Debian LSB info
+### BEGIN INIT INFO
+# Provides:          foiavista
+# Required-Start:    $remote_fs $syslog
+# Required-Stop:     $remote_fs $syslog
+# Default-Start:     2 3 4 5
+# Default-Stop:      0 1 6
+# Short-Description: Start VistA services at boot time
+# Description:       Starts/Stops VistA instances in a sane way.
+#                    Includes starting TaskMan.
+### END INIT INFO
+
+instance="FOIA"
+
+# setup environment variables
+source /opt/$instance/etc/env
+
+# Start VistA background tasks
+start() {
+    # TODO: logging
+
+    # Check to see if database is clean
+    # TODO: check here
+
+    #if(!clean)
+    #   echo "DATABASE IS NOT CLEAN!"
+    #   echo "Trying auto recovery (mupip recover --backwards)
+    #   $gtm_dist/mupip journal -recover -backward /opt/$instance/$gtmver/j/$instacne.mjl
+    #fi
+
+    # Start TaskMan
+    $gtm_dist/mumps -run START^ZTMB
+
+    # Others? MailMan?
+    # HL7, VistALink, RPC Broker are all handled by xinetd
+}
+stop() {
+    # TODO: logging
+
+    # Stop TaskMan
+    mumps -run STOP^ZTMB <"y\r\ny\n"
+
+    # Wait for TaskMan to stop
+    sleep 60
+
+    # Look for mumps processes and terminate them nicely
+    processes=$(psgrep mumps)
+    if [ ! -z "${processes}" ] ; then
+        for i in ${processes}
+        do
+            mupip stop ${i}
+        done
+
+        # Wait for process to react to mupip stop instead of force kill later
+        sleep 5
+    fi
+
+    # Look for mumps processes that are still running
+    processes=$(psgrep mumps)
+    if [ ! -z "${processes}" ] ; then
+        #TODO: logging required here
+        echo "mumps process are being shutdown forcefully!"
+        pkill -9 mumps
+    fi
+}
+
+case "$1" in
+    (start)
+        start()
+        ;;
+    (stop)
+        stop()
+        ;;
+    (restart)
+        stop()
+        start()
+        ;;
+    (*)
+        echo "Usage: $0 {start|stop|restart}"
+        ;;
+esac
