@@ -1,0 +1,13 @@
+service vista-rpcbroker
+{
+  port = 9430
+  socket_type = stream
+  protocol = tcp
+  type = UNLISTED
+  user = foia
+  server = /home/foia/bin/rpcbroker.sh
+  wait = no
+  disable = no
+  per_source = UNLIMITED
+  instances = UNLIMITED
+}
