@@ -1,0 +1,13 @@
+service vista-vistalink
+{
+  port = 8001
+  socket_type = stream
+  protocol = tcp
+  type = UNLISTED
+  user = foia
+  server = /home/foia/bin/vistalink.sh
+  wait = no
+  disable = no
+  per_source = UNLIMITED
+  instances = UNLIMITED
+}
